<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="no_date_and_time_selected">No date and time selected</string>
    <string name="save">Save</string>
    <string name="add_task">Add task</string>
    <string name="cancel">Cancel</string>
    <string name="edit_task">Edit task</string>
    <string name="remove_task">Remove task</string>
    <string name="detail_task">Detail task</string>
    <string name="finished">Finished</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_out">Sign out</string>
    <string name="reactivate">Reactivate</string>
    <string name="home">Home</string>
    <string name="priority">Priority:</string>
    <string name="low">Low</string>
</resources>