<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TaskActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/title_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
            />

            <EditText
                android:id="@+id/description_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/description"
            />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Priority"
            />

            <CheckBox
                android:id="@+id/low_priority_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Low"
            />

            <CheckBox
                android:id="@+id/mid_priority_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mid"
            />

            <CheckBox
                android:id="@+id/high_priority_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="High"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="------"
            />

            <CheckBox
                android:id="@+id/finished_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finished"
            />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
            />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="2dp"
            />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>